@@ -12,6 +12,7 @@ ikiwiki (3.20110716) UNRELEASED; urgency=low
   * Fix typo in Danish translation of shortcuts page that caused expoentional
     regexp blowup.
   * Fix escaping of html entities in permalinks.
+  * Fix escaping of html entities in tag names.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400
 
